--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=SpringAPI
 #mySQL Config Stuff
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=${JAWSDB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
