--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=SpringAPI
 #mySQL Config Stuff
 spring.datasource.url=${JAWSDB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=${PORT:8080}
 
 
 
